--- a/packages/matchbox/src/components/TextField/TextField.module.scss
+++ b/packages/matchbox/src/components/TextField/TextField.module.scss
@@ -71,12 +71,12 @@
 
 .Prefix {
   left: rem(12);
-  padding: rem(4) 0;
+  padding: rem(6) 0;
 }
 
 .Suffix {
   right: rem(12);
-  padding: rem(4) 0;
+  padding: rem(6) 0;
 }
 
 .InputWrapper {
